--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,6 @@ LazyData: true
 RoxygenNote: 7.1.2
 Suggests: 
     covr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    utils
 Config/testthat/edition: 3
